# Trading-Strategies

./: .gitignore  Dockerfile  Dockerfile.angel_api  Dockerfile.db_api  Dockerfile.hello_api  Dockerfile.system_monitor  Dockerfile.txn_cost_api  Procfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy.yml
deploy/: nginx.conf
src/libs/db_helpers/: pyproject.toml
src/libs/db_helpers/db_helpers/: __init__.py  engine.py
src/libs/hello_lib/: README.md  pyproject.toml
src/libs/hello_lib/hello_lib/: __init__.py  config.py  greeting.py
src/libs/service_metrics/: pyproject.toml
src/libs/service_metrics/service_metrics/: __init__.py  middleware.py  router.py
src/libs/txn_cost/: pyproject.toml
src/libs/txn_cost/tests/: test_txn_cost.py
src/libs/txn_cost/txn_cost/: __init__.py  calculator.py  models.py  rates.py
src/services/python/angel_api/: pyproject.toml
src/services/python/angel_api/angel_api/: main.py
src/services/python/db_api/: pyproject.toml
src/services/python/db_api/db_api/: main.py
src/services/python/db_api/tests/: test_db_api.py
src/services/python/hello_api/: README.md  pyproject.toml
src/services/python/hello_api/hello_api/: main.py
src/services/python/hello_api/tests/: test_hello.py
src/services/python/system_monitor/: pyproject.toml
src/services/python/system_monitor/system_monitor/: main.py
src/services/python/txn_cost_api/: pyproject.toml
src/services/python/txn_cost_api/tests/: test_txn_cost_api.py
src/services/python/txn_cost_api/txn_cost_api/: main.py
src/services/typescript/db_ui/: index.html  package-lock.json  package.json
src/services/typescript/db_ui/src/: App.tsx
src/services/typescript/hello_ui/: .env.production  README.md  index.html  package-lock.json  package.json
src/services/typescript/hello_ui/src/: App.tsx
src/services/typescript/trading-strategies-ui/: .env.development  .env.production  package-lock.json  package.json
src/services/typescript/trading-strategies-ui/src/: App.tsx
src/services/typescript/trading-strategies-ui/src/components/: Nav.tsx
src/services/typescript/txn_cost_ui/: .env.production  index.html  package-lock.json  package.json
src/services/typescript/txn_cost_ui/src/: App.tsx
(+6 files in other folders)
