[project]
name = "angel-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "service-metrics",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "smartapi-python>=1.3",
    "logzero>=1.7",
    "pyotp>=2.9",
    "pytz>=2024.1",
    "websocket-client>=1.7",
    "httpx>=0.27",
]

[tool.uv.sources]
service-metrics = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
