[project]
name = "hello-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "hello-lib",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[tool.uv.sources]
hello-lib = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
