[project]
name = "system-monitor"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "service-metrics",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "psutil>=5.9",
]

[tool.uv.sources]
service-metrics = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
